@@ -26,7 +26,7 @@ hadoop-mapred.version=0.21.0-SNAPSHOT
 zookeeper.version=3.2.2
 thrift.version=r771587
 
-lucene.version=2.2.0
+lucene.version=3.0.0
 
 jsr311.version=1.1.1
 
